--- a/style.css
+++ b/style.css
@@ -219,8 +219,11 @@ footer {
 }
 
 .links{
-  margin-top: 20px;
-  margin-left: 10px;
+
+    display: block;
+    list-style:none;
+    margin-top: 20px;
+    margin-left: 10px;
 }
 
 
@@ -436,7 +439,7 @@ margin-right: auto;
   padding: 10px 20px;
   font-size: 18px;
   background-color: transparent;
-  color: s#fff;
+  color:#000000;
   box-shadow: 0 0 20px rgba(255, 255, 255, 0.5);
   border: none;
   border-radius: 5px;
@@ -540,4 +543,78 @@ margin-right: auto;
     
     .stories {
       animation: floating 2s ease-in-out infinite;
+    }
+
+
+
+    .header {
+      display: flex;
+      align-items: center;
+    }
+    
+
+    .hamburger-btn {
+      display: none; /* 預設隱藏漢堡按鈕 */
+      font-size: 20px;
+      margin-right: 10px;
+    }
+
+
+    
+
+
+
+
+
+
+
+
+
+
+
+    @media screen and (max-width:360px){
+ 
+
+      .hamburger-btn {
+        display: block; /* 當寬度小於 360px 時顯示漢堡按鈕 */
+      }
+      
+      .links {
+        display: none; /* 當寬度小於 360px 時隱藏連結列表 */
+      }
+
+     header{
+      height: 30%;
+     }
+     .indextopic{  
+       font-size:28px;
+       white-space: nowrap;
+      
+       }
+     .typing-text{
+      width:90%;
+      font-size: 6px;
+      word-break: break-all;
+      padding-top: 40%;
+      margin-left: 10%;
+     }
+   
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+      
     }
