--- a/style.css
+++ b/style.css
@@ -572,16 +572,35 @@ margin-right: auto;
 
 
 
-    @media screen and (max-width:360px){
+    @media screen and (max-width:451px){
  
 
       .hamburger-btn {
         display: block; /* 當寬度小於 360px 時顯示漢堡按鈕 */
+        background-color: transparent;
+        color: #47280a;
+        border: #fff;
+        margin-top: 5%;
+        margin-left: 5%;
       }
       
       .links {
         display: none; /* 當寬度小於 360px 時隱藏連結列表 */
+        
       }
+
+      nav ul li a {
+        
+        font-size: 14px;
+        display: flex;
+        text-align:left;
+        float: left;
+        align-items: center;
+        justify-content: center;
+       padding: 5px 5px 10px 5px;
+       
+      }
+
 
      header{
       height: 30%;
@@ -595,11 +614,13 @@ margin-right: auto;
       width:90%;
       font-size: 6px;
       word-break: break-all;
-      padding-top: 40%;
+      padding-top: 30%;
       margin-left: 10%;
      }
    
-
+     #nextButton{
+  bottom: 10%;
+}
 
 
 
